# rust-solutions

./: .gitignore
catr/: Cargo.toml
catr/src/: lib.rs  main.rs
echor/: Cargo.toml  mk-out.sh
echor/src/: main.rs
echor/tests/: cli.rs
hello/: Cargo.toml
hello/tests/: cli.rs
