[package]
name = "echor"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Németh <nkevin@outlook.hu>"]
description = "Rust echo."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
